<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_offline"
        android:icon="@drawable/ic_exam"
        android:title="@string/offline" />

    <item android:title="Liên hệ">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_fanpage"
                    android:icon="@drawable/ic_fb"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_web"
                    android:icon="@drawable/ic_web"
                    android:title="@string/menu_gallery" />
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_information"
                    android:title="@string/info" />
            </group>
        </menu>
    </item>
    <item android:title="Thoát">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>