<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="6dp"
    android:paddingTop="12dp"
    android:paddingRight="6dp"
    android:paddingBottom="12dp">

    <CheckBox
        android:id="@+id/checkbox_move_to_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/move_question"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btn_delete_type"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_move_to_default"
        android:layout_alignParentEnd="true"
        android:text="@string/delete"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_move_to_default"
        android:layout_alignParentLeft="true"
        android:text="@string/no" />
</RelativeLayout>