<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FileImportActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_layout"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="@string/select_zip"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_select_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="@string/select_type"
            android:textAllCaps="false" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/button_menu"
        android:text="@string/input"
        android:textColor="@color/text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/txt_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preview_zip"
            android:padding="6dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp" />
    </ScrollView>


</LinearLayout>