<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground">

    <include
        android:id="@+id/bar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/num_question"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtNumQues"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:background="@android:color/transparent"
            android:hint="0"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:orientation="horizontal">

        <TextView
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/select_type"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSelectType"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_normal"
            android:maxWidth="150dp"
            android:singleLine="true"
            android:text="@string/default_type"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnAddToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@drawable/button_menu"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/text" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_type_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="10dp" />


    <!--    <CheckBox-->
    <!--        android:id="@+id/checkMark"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@id/checkMixAns"-->
    <!--        android:text="Chấm điểm (thang điểm 10)" />-->

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_type_select"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/time"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtMinute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:background="@android:color/transparent"
            android:hint="Số phút"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#000000"
            android:textColorHint="@color/grey_20"
            android:textSize="16sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkMixAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:text="@string/mix_answer" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkMixAns"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_menu"
        android:text="@string/done"
        android:textColor="@color/text" />

</RelativeLayout>